Fixed terminology (inverse_fn->observe_fn, priors->initial)

--- a/PFilterTest.ipynb
+++ b/PFilterTest.ipynb
@@ -74,8 +74,8 @@
     "\n",
     "def test_filter():\n",
     "    # create the filter\n",
-    "    pf = pfilter.ParticleFilter(priors=priors, \n",
-    "                    inverse_fn=blob,\n",
+    "    pf = pfilter.ParticleFilter(initial=priors, \n",
+    "                    observe_fn=blob,\n",
     "                    n_particles=200,\n",
     "                    dynamics_fn=velocity,\n",
     "                    noise_fn=lambda x: \n",
